Initial migration v8 add notifications support
